--- a/browser_extension/popup.html
+++ b/browser_extension/popup.html
@@ -7,6 +7,7 @@
     #status { margin-bottom: 10px; font-weight: bold; }
     #export-section { display: none; }
     .recording { color: red; }
+    textarea { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
   </style>
 </head>
 <body>
@@ -14,8 +15,15 @@
   <div id="status">Status: Idle</div>
   <button id="toggleBtn">Start Recording</button>
   <div id="export-section">
-      <button id="downloadBtn">Download JSON</button>
+      <button id="downloadBtn">Export raw + flowmap</button>
+      <hr />
+      <div style="font-size: 12px; margin-bottom: 6px;">Convert raw JSON file -> flowmap</div>
+      <input id="rawFileInput" type="file" accept="application/json,.json" style="width: 100%; margin-bottom: 6px;" />
+      <div style="font-size: 12px; margin-bottom: 6px;">...or paste raw JSON</div>
+      <textarea id="rawJsonInput" rows="5" style="width: 100%; margin-bottom: 6px;" placeholder='{"meta":...,"pages":[...]}'></textarea>
+      <button id="convertBtn">Build FlowMap</button>
   </div>
   <script src="popup.js"></script>
 </body>
 </html>
+
